# A-

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: pages.yml
assets/: report.css
config/: limit_rules.toml
docs/: design.md  quickstart.md  real_data_example.md  spec.md
scripts/: generate_readme_assets.py
src/limitup_lab/: __init__.py  __main__.py  backtest.py  cli.py  fill_models.py  io.py  labels.py  limits.py  report.py  returns.py  schema.py  stats.py  strategy_base.py  streaks.py
src/limitup_lab/adapters/: __init__.py  akshare.py
src/limitup_lab/strategies/: __init__.py  buy_first_limitup_sell_next_close.py  buy_non_one_word_limitup_sell_next_open.py
templates/: report.html.j2
tests/: test_akshare_adapter.py  test_backtest.py  test_ci_contract.py  test_cli_pipeline.py  test_fill_models.py  test_ingest_cli.py  test_labels.py  test_limits.py  test_pages_workflow.py  test_readme_product.py  test_release_metadata.py  test_returns_stats.py  test_schema_io.py  test_strategies.py  test_streaks.py
tests/fixtures/: daily_bars.csv  daily_bars_missing.csv  demo_daily_bars.csv  demo_instruments.csv  instruments.csv  strategy_signals.csv
