[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "limitup-lab"
version = "0.1.0"
description = "A-share limit-up ecosystem research and strategy health-check (Phase 1, daily)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "pydantic>=2.0",
  "typer>=0.12",
  "jinja2>=3.1",
  "matplotlib>=3.7",
  "pytest>=8.0",
  "ruff>=0.6",
]

[project.scripts]
limitup-lab = "limitup_lab.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
